fix iOS squish

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,7 +20,7 @@ main {
     margin: 0 auto;
 }
 
-main > img:first-child {
+main > div > img:first-child {
     width: 100%;
     max-width: 500px;
 }
@@ -53,7 +53,7 @@ section p {
     -webkit-user-select: none;
     touch-action: manipulation;
 }
-  
+
 .apple-button:focus {
     box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
     outline: 0;
